add jwt service/jwt cookies/remove portuguese comments